--- a/src/main.css
+++ b/src/main.css
@@ -34,6 +34,32 @@
     box-shadow: 2px 2px 2px 2px rgba(89, 31, 112, 0.5);
 }
 
+.themeIcon:hover {
+    color: #fef08a;
+}
+.topbarMila {
+    font-size: 24px;
+    margin-right: 80px;
+    margin-top: 8px;
+}
+
+.navlinks {
+    padding: 20px 50px;
+    font-size: 50px;
+}
+
+@media (max-width: 480px) {
+    .topbarMila {
+        font-size: 20px;
+        margin-top: 12px;
+    }
+
+    .navlinks {
+        padding: 20px 50px;
+        font-size: 30px;
+    }
+  }
+
 
 
 
