--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -21,10 +21,18 @@
     padding-right: 24px;
 }
 
+.tabText {
+    font-size: 24px;
+}
+
+.textSize {
+    font-size: 18px;
+}
+
 @media (max-width: 1190px) {
   
     .tabs {
-        display: none;
+        margin-top: 0;
     }
     
     .cvButton {
@@ -45,6 +53,12 @@
 @media (max-width: 480px) {
     .header{
         margin-bottom: 10px;
+    }
+    .tabText {
+        font-size: 18px;
+    }
+    .textSize {
+        font-size: 16px;
     }
   }
 
